playground/argocd/argocd-ingress.yaml
# ArgoCD UI 접근을 위한 Ingress 설정

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  rules:
    - host: argocd.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd-server
                port:
                  name: http
